--- a/veilleTechno.html
+++ b/veilleTechno.html
@@ -63,7 +63,7 @@
 
                         <div>
                             <h2 class="h3 ">Sujet</h2>
-                            <p>Je m'interesse a l'informatique depuis un long moment (surtout quand il touche a mes passions) et je cherche a en savoir plus sur les technologies utilisé, le fonctionnement general ou les amélioration possibles</p>
+                            <p>Je m'interesse a l'informatique depuis <strong>un long moment (surtout quand il touche a mes passions) et je cherche a en savoir plus sur les technologies utilisé, le fonctionnement general ou les amélioration possibles</p>
                         </div>
                         <div>
                             <h3 class="h3 ">Outils</h3>
