--- a/stage.html
+++ b/stage.html
@@ -66,14 +66,15 @@
 
                         <div>
                             <h2 class="h3 ">Activités</h2>
-                            <p>Développement de logiciels en embarqué L’activité principale (et historique) de CPcode consiste à développer des logiciels sur cartes électroniques à base de microcontrôleur (embarqué) : Développement « bas niveau » : drivers
-                                de périphériques, gestion d’écrans, implémentations de stack (graphisme, communication, …), mise en œuvre de bus de terrain, … Développement niveau « applicatif » : contrôle commande « temps réel », affichage, log d’informations,
-                                transfert de données, … </p>
+                            <p>Développement de <strong>logiciels embarqué</strong></p>
+                            <p> L’activité principale (et historique) de CPcode consiste à <strong>développer des logiciels</strong> sur cartes électroniques à base de microcontrôleur (embarqué) : Développement « bas niveau » : drivers
+                            de périphériques, gestion d’écrans, implémentations de stack (graphisme, communication, …), mise en œuvre de bus de terrain, … <strong>Développement niveau « applicatif »</strong> : contrôle commande « temps réel », affichage, log d’informations,
+                            transfert de données, …</p>
+                             
                         </div>
 
-
                         <h2 class="h3 ">Projets</h2>
-                        <p>Nous devions crée une application Android qui devais effectuer une serie de ping sur demande. Nous devions crée un moyen d'estimé la connexion internet selon les lieux des chantiers parcouru</p>
+                        <p>Nous devions crée une <strong>application Android</strong> qui devais effectuer une serie de ping sur demande. Nous devions crée un moyen d'estimé la connexion internet selon les lieux des chantiers parcouru</p>
 
                         <div>
                             <ul>
@@ -110,43 +111,43 @@
                     <div class="card-container text-center ">
 
                         <div class="row ">
-                            <div class="col-lg-4 col-md-6 ">
+                            <div class="col-lg-6 col-md-6 ">
                                 <div class="card ">
                                     <img src="./assets/images/pings.png " class="card-img-top " alt="... " width="100 " height="100 ">
                                     <div class="card-body ">
                                         <h3 class="card-title ">Les pings</h3>
-                                        <p class="card-text ">Une fois l’adresse ip, le timeout (en seconde) et la fréquence (en seconde) rentrées et le bouton pressé, les pings sont effectués en arrière-plan sur la fréquence demandé.</p>
+                                        <p class="card-text ">Une fois l’adresse ip, le timeout (en seconde) et la fréquence (en seconde) rentrées et le bouton pressé, <strong>les pings sont effectués en arrière-plan</strong> sur la fréquence demandé.</p>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="col-lg-4 col-md-6 ">
+                            <div class="col-lg-6 col-md-6 ">
                                 <div class="card ">
                                     <img src="./assets/images/mailimage.PNG " class="card-img-top " alt="... " width="100 " height="100 ">
                                     <div class="card-body ">
                                         <h3 class="card-title ">Les mails</h3>
-                                        <p class="card-text ">On saisie l’adresse mail et le mot de passe (crypté) de l’envoyeur, et l’adresse du receveur. Le message est écrit automatiquement (composé de la date et l’heure et du dernier fichier de test)
+                                        <p class="card-text ">On saisie l’adresse mail et le mot de passe (crypté) de l’envoyeur, et l’adresse du receveur. <strong>Le message est écrit automatiquement</strong> (composé de la date et l’heure et du dernier fichier de test)
                                         </p>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="col-lg-4 col-md-6 ">
+                            <div class="col-lg-6 col-md-6 ">
                                 <div class="card ">
                                     <img src="./assets/images/fichier.png " class="card-img-top " alt="... " width="100 " height="100 ">
                                     <div class="card-body ">
                                         <h3 class="card-title ">Le fichier</h3>
-                                        <p class="card-text ">Un fichier texte créer pour accueillir des données, des données écrites en format csv pour une utilisation facilité sur pc</p>
+                                        <p class="card-text ">Un fichier texte créer pour accueillir des données, des données écrites en <strong>format csv</strong> pour une utilisation facilité sur pc</p>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="col-lg-4 col-md-6 ">
+                            <div class="col-lg-6 col-md-6 ">
                                 <div class="card ">
                                     <img src="./assets/images/gps.png " class="card-img-top " alt="... " width="100 " height="100 ">
                                     <div class="card-body ">
                                         <h3 class="card-title ">Le GPS</h3>
-                                        <p class="card-text ">Pendant les tests, la localisation de l’utilisateur pour savoir l’endroit ou la connexion manque.</p>
+                                        <p class="card-text ">Pendant les tests, la localisation de l’utilisateur pour savoir <strong>l’endroit où la connexion manque</strong></p>
                                     </div>
                                 </div>
                             </div>
