--- a/projets.html
+++ b/projets.html
@@ -69,10 +69,13 @@
                             </div>
 
                             <p>La société NEGOMAT vient tout juste d’entrer dans le réseau d’adhérents de GEDIMAT. Pour fêter cet événement, NEGOMAT a décidé d’organiser un jeu concours nommé «GEDIMA’GINATION».</p>
-
-                            <a href="./projet1.html">
+                            
+                            <!--
+                                <a href="./projet1.html">
                                 <p class="ensavoirplus">En savoir plus...</p>
-                            </a>
+                                </a>
+                            -->
+                            
 
                             <a href="https://github.com/Pixiel333/gedimagination_androidStudio">
                                 <p>Lien 1 GitHub (Coté android)</p>
@@ -87,7 +90,7 @@
                     <div class="row">
                         <div class="col-lg-4 col-md-12">
                             <div class="text-center">
-                                <img src="./assets/images/imageandroidPingAuto.png" class="img-fluid rounded img_projets1" width="300" height="300">
+                                <img src="./assets/images/apl.png" class="img-fluid rounded img_projets1" width="300" height="300">
                             </div>
                         </div>
                         <div class="col-lg-8 col-md-12">
@@ -97,9 +100,11 @@
                             <p>L’application, développée sous ANDROID, devra permettre de mesurer la « connectivité » internet en GSM DATA (ou WIFI). L’objectif est d’utiliser cette application pour vérifier qu’internet soit disponible sur certains sites
                                 sur lesquels seront installés des systèmes communiquant en GSM DATA. Pour tester la connectivité sur un chantier par exemple</p>
 
-                            <a href="./projet2.html">
+                            <!--
+                                <a href="./projet2.html">
                                 <p class="ensavoirplus">En savoir plus...</p>
-                            </a>
+                                </a>
+                            -->
 
 
                             <a href="https://github.com/gui27Git/Android_ping_auto">
@@ -136,11 +141,13 @@
                                         <span><ion-icon name="call"></ion-icon>07.82.44.37.71</span>
                                     </div>
                                 </li>
+                                <!--
                                 <li>
                                     <div class="icon_align">
                                         <a href="attente"><ion-icon name="document"></ion-icon>Mon CV</a>
                                     </div>
                                 </li>
+                                -->
                             </ul>
                         </div>
                     </div>
