--- a/veilleTechno.html
+++ b/veilleTechno.html
@@ -63,7 +63,7 @@
 
                         <div>
                             <h2 class="h3 ">Sujet</h2>
-                            <p>Je m'interesse a l'informatique depuis un long moment (surtout quand il touche a mes passions) et je cherche a en savoir plus sur les technologies utilisé, le fonctionnement general ou les amélioration possibles</p>
+                            <p>Je m'interesse a l'informatique depuis un long moment (surtout quand il touche a mes passions) et je cherche à en savoir plus sur les technologies utilisées, le fonctionnement général ou les améliorations possibles.</p>
                         </div>
                         <div>
                             <h3 class="h3 ">Outils</h3>
@@ -110,7 +110,7 @@
                                 <h3 class="">Quand</h3>
                             </div>
                             
-                            <p>Je m'informe souvent durant mes temps libres (durant les trajets de bus ou entre deux cours) et quand les medias me le permettent.</p>
+                            <p>Je m'informe souvent durant mes temps libres (durant les trajets de bus ou entre deux cours) et quand les médias me le permettent.</p>
                             <h3 class="h3 ">Utilisation</h3>
                             <p>Grâce à mes connaissances acquises durant mes recherches, j'ai monté mon propre ordinateur, j'ai créé des outils pour mes jeux ....</p>
                         </div>
