--- a/moi.html
+++ b/moi.html
@@ -64,12 +64,12 @@
                             <h1 class="h2 ">02 : Presentation</h1>
                         </div>
 
-                        <p>Je me prenomme Matisse Dimier</p>
+                        <p>Je me prénomme Matisse DIMIER</p>
                         <p>
                             Étudiant en deuxième année de BTS SIO (Services Informatiques aux Organisations) Option SLAM (Solutions logicielles et applications métiers)
                         </p>
                         <p>
-                            Diplomé d'un BAC STI2D (Sciences et Technologies de l'Industrie et du Développement Durable) Option SIN (Système d'information et numérique)
+                            Diplomé d'un Baccaloréat STI2D (Sciences et Technologies de l'Industrie et du Développement Durable) Option SIN (Système d'information et numérique)
                         </p>
                         <br>
                         <p>
