--- a/stage.html
+++ b/stage.html
@@ -74,7 +74,7 @@
                         </div>
 
                         <h2 class="h3 ">Projets</h2>
-                        <p>Nous devions crée une <strong>application Android</strong> qui devais effectuer une serie de ping sur demande. Nous devions crée un moyen d'estimé la connexion internet selon les lieux des chantiers parcouru</p>
+                        <p>Nous devions créer une <strong>application Android</strong> qui devait effectuer une serie de ping sur demande. Nous devions créer un moyen d'estimer la connexion internet selon les lieux des chantiers parcourus.</p>
 
                         <div>
                             <ul>
@@ -116,7 +116,7 @@
                                     <img src="./assets/images/pings.png " class="card-img-top " alt="... " width="100 " height="100 ">
                                     <div class="card-body ">
                                         <h3 class="card-title ">Les pings</h3>
-                                        <p class="card-text ">Une fois l’adresse ip, le timeout (en seconde) et la fréquence (en seconde) rentrées et le bouton pressé, <strong>les pings sont effectués en arrière-plan</strong> sur la fréquence demandé.</p>
+                                        <p class="card-text ">Une fois l’adresse IP, le timeout (en seconde) et la fréquence (en seconde) rentrée et le bouton pressé, <strong>les pings sont effectués en arrière-plan</strong> sur la fréquence demandée.</p>
                                     </div>
                                 </div>
                             </div>
@@ -126,7 +126,7 @@
                                     <img src="./assets/images/mailimage.PNG " class="card-img-top " alt="... " width="100 " height="100 ">
                                     <div class="card-body ">
                                         <h3 class="card-title ">Les mails</h3>
-                                        <p class="card-text ">On saisie l’adresse mail et le mot de passe (crypté) de l’envoyeur, et l’adresse du receveur. <strong>Le message est écrit automatiquement</strong> (composé de la date et l’heure et du dernier fichier de test)
+                                        <p class="card-text ">On saisit l’adresse mail et le mot de passe (crypté) de l’envoyeur, et l’adresse du receveur. <strong>Le message est écrit automatiquement</strong> (composé de la date et l’heure et du dernier fichier de test)
                                         </p>
                                     </div>
                                 </div>
@@ -137,7 +137,7 @@
                                     <img src="./assets/images/fichier.png " class="card-img-top " alt="... " width="100 " height="100 ">
                                     <div class="card-body ">
                                         <h3 class="card-title ">Le fichier</h3>
-                                        <p class="card-text ">Un fichier texte créer pour accueillir des données, des données écrites en <strong>format csv</strong> pour une utilisation facilité sur pc</p>
+                                        <p class="card-text ">Un fichier texte créé pour accueillir des données, des données écrites en <strong>format csv</strong> pour une utilisation facilitée sur pc</p>
                                     </div>
                                 </div>
                             </div>
@@ -163,15 +163,17 @@
                             <li>La mission intéressante</li>
                             <li>Le travail en équipe</li>
                         </ul>
+                        <ul></ul>
                         <ul>
                             <p class="h3 ">Les mauvais côtés de mon stage</p>
                             <li>Le télétravail</li>
                             <li>La difficulté imprévue</li>
                         </ul>
+                        <ul></ul>
                         <ul>
                             <p class="h3 ">Hardskills</p>
-                            <li>Plus de connaissance en JAVA</li>
-                            <li>Connaissance approfondie sur Android Studio</li>
+                            <li>Plus de connaissances en JAVA</li>
+                            <li>Connaissances approfondie sur Android Studio</li>
                             <li>Maitrise de GitHub</li>
                             <li>Manipulation des pings</li>
                         </ul>
