--- a/projets.html
+++ b/projets.html
@@ -60,7 +60,7 @@
                     <div class="row">
                         <div class="col-lg-4 col-md-12">
                             <div class="text-center">
-                                <img src="./assets/images/xmlAS.png" class="img-fluid rounded img_projets1" width="300" height="300">
+                                <img src="./assets/images/xmlAS.PNG" class="img-fluid rounded img_projets1" width="300" height="300">
                             </div>
                         </div>
                         <div class="col-lg-8 col-md-12">
@@ -90,7 +90,7 @@
                     <div class="row">
                         <div class="col-lg-4 col-md-12">
                             <div class="text-center">
-                                <img src="./assets/images/apl.png" class="img-fluid rounded img_projets1" width="300" height="300">
+                                <img src="./assets/images/applipingimage.jpg" class="img-fluid rounded img_projets1" width="300" height="300">
                             </div>
                         </div>
                         <div class="col-lg-8 col-md-12">
